# MRE2-GOFA_Dashboard

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.windows.yml  docker-compose.yml  package-lock.json  package.json
ABB/: readme.txt
ABB/abb_egm_rws_managers/: .clang-format  CMakeLists.txt
ABB/abb_egm_rws_managers/include/abb_egm_rws_managers/: system_data_parser.h
ABB/abb_egm_rws_managers/src/: rws_manager.cpp  system_data_parser.cpp
ABB/abb_gofa_custom/abb_crb15000_moveit/: CMakeLists.txt  package.xml
ABB/abb_gofa_custom/abb_crb15000_moveit/config/: abb_crb15000_5_95.ros2_control.xacro
ABB/abb_gofa_custom/abb_crb15000_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ABB/abb_gofa_custom/abb_crb15000_support/: CMakeLists.txt  package.xml
ABB/abb_gofa_custom/abb_crb15000_support/config/: crb15000.rviz
ABB/abb_gofa_custom/abb_crb15000_support/urdf/: crb15000_5_95_macro.xacro  crb15000_5_95_ros2_control.xacro
ABB/abb_librws/: CMakeLists.txt
ABB/abb_librws/include/abb_librws/: rws.h  rws_poco_client.h  rws_poco_result.h  rws_subscription.h  system_constants.h
ABB/abb_librws/include/abb_librws/v2_0/: rws_client.h  rws_interface.h
ABB/abb_librws/src/: connection_options.cpp  parsing.cpp  rws.cpp  rws_poco_client.cpp  rws_poco_result.cpp  rws_rapid.cpp  rws_subscription.cpp  rws_websocket.cpp  system_constants.cpp
ABB/abb_librws/src/common/rw/: panel.cpp  rapid.cpp
ABB/abb_librws/src/v1_0/: rws.cpp  rws_client.cpp  rws_interface.cpp  rws_state_machine_interface.cpp
ABB/abb_librws/src/v1_0/rw/: io.cpp  panel.cpp  rapid.cpp
ABB/abb_librws/src/v2_0/: rws.cpp  rws_client.cpp  rws_interface.cpp  rws_state_machine_interface.cpp
ABB/abb_librws/src/v2_0/rw/: panel.cpp  rapid.cpp
ABB/abb_librws/test/: rws_rapid_test.cpp  rws_rapid_test.h
ABB/abb_ros2/.github/workflows/: build_and_test.yaml  format.yaml
ABB/abb_ros2/abb_bringup/launch/: abb_control.launch.py  crb15000_complete.launch.py
ABB/abb_ros2/abb_hardware_interface/: CMakeLists.txt  package.xml
ABB/abb_ros2/abb_hardware_interface/include/abb_hardware_interface/: abb_hardware_interface.hpp
ABB/abb_ros2/abb_hardware_interface/src/: abb_hardware_interface.cpp
ABB/abb_ros2/abb_ros2/: package.xml
ABB/abb_ros2/robot_specific_config/abb_irb1200_support/: package.xml
ABB/abb_ros2/robot_specific_config/abb_irb4600_support/: package.xml
backend/: __init__.py  app.py
docker/: create-local-cert.sh  entrypoint.sh
docker/nginx/templates/: sman.conf.template
frontend/: app.js  hmi.css  hmi.html  hmi.js  index.html  styles.css
log/: latest_list
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/abb_bringup/share/abb_bringup/: package.sh
ros2_ws/install/abb_crb15000_moveit/share/abb_crb15000_moveit/: .setup_assistant  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/abb_crb15000_support/share/abb_crb15000_support/: package.dsv  package.ps1  package.sh
ros2_ws/install/abb_egm_rws_managers/include/abb_egm_rws_managers/: data_containers.h  egm_manager.h  robot_controller_description.pb.h  rws_manager.h
ros2_ws/install/abb_egm_rws_managers/share/abb_egm_rws_managers/: package.sh
ros2_ws/install/abb_hardware_interface/share/abb_hardware_interface/: package.sh
ros2_ws/install/abb_irb1200_5_90_moveit_config/share/abb_irb1200_5_90_moveit_config/: package.sh
ros2_ws/install/abb_irb1200_support/share/abb_irb1200_support/: package.sh
ros2_ws/install/abb_libegm/include/abb_libegm/: egm.pb.h  egm_wrapper_trajectory.pb.h
ros2_ws/install/abb_libegm/share/abb_libegm/: abb_libegmTargets-release.cmake  abb_libegmTargets.cmake  package.sh
ros2_ws/install/abb_librws/include/abb_librws/: connection_options.h  rws_cfg.h  rws_error.h  rws_resource.h  xml_attribute.h
ros2_ws/log/: latest_build
ros2_ws/src/gofa_description/: CMakeLists.txt  package.xml
ros2_ws/src/gofa_description/urdf/: gofa.urdf.xacro
ros2_ws/src/gofa_egm_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/gofa_egm_driver/gofa_egm_driver/: egm_trajectory_server.py
ros2_ws/src/gofa_egm_driver/launch/: egm_server.launch.py
ros2_ws/src/gofa_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/gofa_moveit_config/config/: gofa.srdf  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
ros2_ws/src/gofa_moveit_config/launch/: demo.launch.py  real.launch.py
tests/: dashboard-demo.spec.js  digital-twin.spec.js
tools/: ros_joint_state_dashboard_bridge.py
(+37 files in other folders)
