<?xml version="1.0"?>
<package format="3">
  <name>abb_crb15000_support</name>
  <version>1.5.0</version>

  <description>
    ROS-Industrial support for the ABB GoFa CRB 15000 (ROS 2 / Jazzy).
    Contains configuration data, meshes and launch files.
  </description>

  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <author>Marco Palma (TU Vienna Institute of Art and Design)</author>
  <maintainer email="noreply@rosindustrial.org">ROS-Industrial community</maintainer>

  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/abb_crb15000_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Optional (oft notwendig in ROS2) -->
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
