<?xml version="1.0"?>
<package format="3">
  <name>gofa_description</name>
  <version>0.1.0</version>
  <description>ROS 2 description package for an ABB GoFa CRB 15000 style arm.</description>
  <maintainer email="philip@example.com">Philip</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
